# hashcheck

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-local  README.md  download.sh  upload.sh
.do/: app.yaml  deploy.template.yaml
.github/workflows/: deploy-container.yaml  publish.yaml
database/: size.txt
fixtures/: hashes.json
scripts/: download.sh  fetch.sh  test.sh  upload.sh
src/: main.rs
