[package]
name = "hibp-server"
version = "0.1.0"
edition = "2021"
description = "Check passwords in the haveibeenpwned database."
homepage = "https://hibp.saveoursecrets.com"
license = "GPL-3.0"
publish = false

[dependencies]
anyhow = "1"
axum = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
easypwned_bloom = {path = "easypwned/easypwned_bloom"}
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "wrap_help", "env"] }
hex = { version = "0.4", features = ["serde"] }
human_bytes = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
